ARROW-1584: [C++/Python] Support Null type in IPC round trips, fix serialize_pandas on empty DataFrame

cc @TomAugspurger @cpcloud -- this turned out to be caused by the index in the empty DataFrame having null type:

```
In [3]: arr = pa.array([])

In [4]: arr.type
Out[4]: DataType(null)

In [5]: arr = pa.array([None, None, None])

In [6]: arr
Out[6]:
<pyarrow.lib.NullArray object at 0x7f28d3d205e8>
[
  NA,
  NA,
  NA
]
```

This type had been unhandled in the IPC machinery, so this resolves ARROW-1637. We need to implement integration tests for this type to make sure such data can be accurately messages between Java and C++/Python

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #1155 from wesm/ARROW-1584 and squashes the following commits:

b7cebf29 [Wes McKinney] Linting
a71c5440 [Wes McKinney] Add non-trivial field after null type and fix buffer handling bug
57dc9622 [Wes McKinney] Support Null type in IPC round trips, fix serialize_pandas on empty DataFrame