cpp/src/arrow/ipc/test-common.h
@@ -697,6 +697,27 @@ Status MakeDecimal(std::shared_ptr<RecordBatch>* out) {
   return Status::OK();
 }
 
+Status MakeNull(std::shared_ptr<RecordBatch>* out) {
+  auto f0 = field("f0", null());
+
+  // Also put a non-null field to make sure we handle the null array buffers properly
+  auto f1 = field("f1", int64());
+
+  auto schema = ::arrow::schema({f0, f1});
+
+  auto a1 = std::make_shared<NullArray>(10);
+
+  std::vector<int64_t> int_values = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+  std::vector<bool> is_valid = {true, true, true, false, false,
+                                true, true, true, true,  true};
+  std::shared_ptr<Array> a2;
+  ArrayFromVector<Int64Type, int64_t>(f1->type(), is_valid, int_values, &a2);
+
+  ArrayVector arrays = {a1, a2};
+  *out = std::make_shared<RecordBatch>(schema, a1->length(), arrays);
+  return Status::OK();
+}
+
 }  // namespace ipc
 }  // namespace arrow
 
